--- a/package.json
+++ b/package.json
@@ -38,15 +38,17 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-jquery": "^0.2.2",
     "karma-webpack": "^2.0.13",
+    "raw-loader": "^0.5.1",
     "style-loader": "^0.20.2",
     "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.9",
+    "webpack-cli": "^2.1.5",
     "webpack-dev-server": "^3.1.0"
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.3"
+    "popper.js": "^1.14.3",
+    "random-word": "^2.0.0"
   }
 }
